# yet-another-hello-world

./: CMakeLists.txt  README.md  foo.cpp  main.cpp
src/: CMakeLists.txt
src/hello-dll/: CMakeLists.txt  foo.cpp  foo.hpp
src/hello-exe/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  test1.cpp
